syntax = "proto3";

package coordinator;

service Coordinator {
  // An example RPC, to show you how to use the RPC framework.
  // You should delete this RPC and add your own.
  rpc Example (ExampleRequest) returns (ExampleReply) {}
  rpc SubmitJob (SubmitJobRequest) returns (SubmitJobReply) {}
  rpc PollJob (PollJobRequest) returns (PollJobReply) {}
}

message ExampleRequest {
  string name = 1;
}

message ExampleReply {
  string message = 1;
}

message SubmitJobRequest {
  repeated string files = 1;
  string output_dir = 2;
  string app = 3;
  uint32 n_reduce = 4;
  bytes args = 5;
}

message SubmitJobReply {
  uint32 job_id = 1;
}

message PollJobRequest {
  uint32 job_id = 1;
}

message PollJobReply {
  bool done = 1;
  bool failed = 2;
  repeated string errors = 3;
}

